Fixed alignment of recipes

--- a/static/styles.css
+++ b/static/styles.css
@@ -157,26 +157,25 @@ u:before {
 
 
 .recipe {
-    width: 100%;
+    width: 90%;
     display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10vw 10vw;
+    grid-template-columns: .8fr 1.4fr .8fr;
 }
 
 .recipes-container {
     width: 100%;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    margin: 0;
     padding: 0;
 }
 
 .recipe span {
     justify-self: center;
-    align-self: start;
+    align-self: center;
     font-size: 1vw;
+    text-align: center;
+    text-wrap: balance;
 }
 
 .header {
